# ML-Course

./: README.md  pyproject.toml  todos.txt
data/regression/: ads_data.csv
regression/: 1. simple_linear_regression.ipynb  2. metrics.ipynb  2. multivariate_linear_regression.ipynb  3. metric.ipynb  3. multivariate_linear_regression.ipynb  4. polynomial_regression.ipynb  5. regularization.ipynb  6. poison_regression.ipynb  multivariate_linear_regression.ipynb  simple_linear_regression.ipynb
